crates/hir-ty/tests/snapshots/jls_definite_assignment__try_finally_assigns.snap
---
source: crates/hir-ty/tests/jls_definite_assignment.rs
assertion_line: 787
expression: out
---
FILE /src/com/example/Da.java:
package com.example;

class Da {
    static void step() {}

    int m() {
        int k;
        try {
            step();
        } finally {
            k = 1;
        }
        return k;
    }
}

method step(): void
  locals: 
  exprs: 
method m(): int
  locals: l0: int
  exprs: e0: void | e1: int | e2: int | e3: int | e4: int
