crates/hir-ty/tests/snapshots/jls_definite_assignment__use_before_assign.snap
---
source: crates/hir-ty/tests/jls_definite_assignment.rs
expression: out
---
FILE /src/com/example/Da.java:
package com.example;

class Da {
    void m() {
        int x;
        int y = x + 1;
    }
}

method m(): void
  locals: l0: int | l1: int
  exprs: e0: <error> | e1: int | e2: <error>
  diags: e0@5:16: variable-might-not-have-been-initialized: Variable 'x' might not have been initialized
