crates/hir-ty/tests/snapshots/jls_definite_assignment__values_of_expressions_not_considered.snap
---
source: crates/hir-ty/tests/jls_definite_assignment.rs
assertion_line: 547
expression: out
---
FILE /src/com/example/Da.java:
package com.example;

class Da {
    void m(int n) {
        int k;
        int constant = 5;
        if (constant > 2)
            k = 3;
        int y = k;
    }
}

method m(int): void
  locals: l0: int | l1: int | l2: int | l3: int
  exprs: e0: int | e1: int | e2: int | e3: boolean | e4: boolean | e5: int | e6: int | e7: int | e8: <error>
  diags: e8@8:16: variable-might-not-have-been-initialized: Variable 'k' might not have been initialized
