crates/hir-ty/tests/snapshots/jls_definite_assignment__while_non_constant_does_not_carry.snap
---
source: crates/hir-ty/tests/jls_definite_assignment.rs
assertion_line: 459
expression: out
---
FILE /src/com/example/Da.java:
package com.example;

class Da {
    void m(int n, boolean p) {
        int k;
        while (p) {
            k = n;
            if (k >= 5) break;
            n = 6;
        }
        int y = k;
    }
}

method m(int, boolean): void
  locals: l0: int | l1: boolean | l2: int | l3: int
  exprs: e0: boolean | e1: boolean | e2: int | e3: int | e4: int | e5: int | e6: int | e7: boolean | e8: boolean | e9: int | e10: int | e11: int | e12: <error>
  diags: e12@10:16: variable-might-not-have-been-initialized: Variable 'k' might not have been initialized
