crates/hir-ty/tests/snapshots/jls_definite_assignment__while_true_break_carries_assignment.snap
---
source: crates/hir-ty/tests/jls_definite_assignment.rs
assertion_line: 435
expression: out
---
FILE /src/com/example/Da.java:
package com.example;

class Da {
    void m(int n) {
        int k;
        while (true) {
            k = n;
            if (k >= 5) break;
            n = 6;
        }
        int y = k;
    }
}

method m(int): void
  locals: l0: int | l1: int | l2: int
  exprs: e0: boolean | e1: boolean | e2: int | e3: int | e4: int | e5: int | e6: int | e7: boolean | e8: boolean | e9: int | e10: int | e11: int | e12: int
