crates/hir-ty/tests/snapshots/jls_definite_assignment__while_true_two_breaks.snap
---
source: crates/hir-ty/tests/jls_definite_assignment.rs
assertion_line: 598
expression: out
---
FILE /src/com/example/Da.java:
package com.example;

class Da {
    int m(int n, boolean p) {
        int k;
        while (true) {
            if (p) {
                k = n;
                break;
            }
            k = n + 1;
            break;
        }
        return k;
    }
}

method m(int, boolean): int
  locals: l0: int | l1: boolean | l2: int
  exprs: e0: boolean | e1: boolean | e2: boolean | e3: boolean | e4: int | e5: int | e6: int | e7: int | e8: int | e9: int | e10: int | e11: int | e12: int
